<resources>
    <string name="app_name">Count Blood</string>
    <string name="todo">TODO</string>
    <string name="title_data">Data</string>
    <string name="title_graph">Graph</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_settings">Settings</string>

    <string name="date">Date</string>
    <string name="date_sort_down">▼ Date ▼</string>
    <string name="date_sort_up">▲ Date ▲</string>
    <string name="value">Value</string>
    <string name="value_sort_down">▼ Value ▼</string>
    <string name="value_sort_up">▲ Value ▲</string>

    <string name="upload_to_web">Upload to web</string>
    <string name="send_csv_by_email">Send CSV by email</string>
    <string name="divider">,</string>

    <string name="add">Add</string>

    <string name="reset_list">Reset List</string>
    <string name="generate_list">Generate list</string>
    <string name="high_blood_sugar">High Blood Sugar</string>
    <string name="low_blood_sugar">Low Blood Sugar</string>
    <string name="long_term_evening">Long Term Evening</string>
    <string name="long_term_morning">Long Term Morning</string>
    <string name="short_term_insulin">Short Term Insulin</string>
    <string name="default_bloodsugar">Default Bloodsugar</string>
    <string name="default_email_reciever">Default Email Receiver</string>
    <string name="reciever_mail_com">receiver@mail.com</string>
    <string name="hh_mm_ddd_dd_mmm">HH:MM DDD-DD-MMM</string>
    <string name="next_alarm">NEXT ALARM: 00.00.00</string>
    <string name="repeat_int">REPEAT INT</string>
    <string name="dd_mm_yyyy">DD/MM-YYYY</string>
    <string name="divider_time">:</string>
    <string name="amount">Amount</string>
    <string name="average">Average</string>
    <string name="avg_symbol">X̄</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>
    <string name="send_mail">Send Mail</string>
    <string name="settings">Settings</string>
    <string name="notification_message">This is a message that will appear in notification</string>
    <string name="see_video">See Video</string>


    <plurals name="samples">
        <item quantity="other">%i</item>
    </plurals>

    <plurals name="average">
        <item quantity="other">%s</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
