<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/txt_date"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:text="@string/date"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/txt_sample"
        android:textSize="30sp"
        android:layout_weight="1"
        android:gravity="center_vertical|end"
        android:text="@string/value"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listImage"
        android:src="@drawable/ic_blood_drop"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo" />

</LinearLayout>