<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--        BOTTOM BUTTONS-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_list"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_generatelist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/generate_list"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <!--        TOP-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_defaultEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_email_reciever" />

            <EditText
                android:id="@+id/input_defaultEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:hint="@string/reciever_mail_com"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_saveSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_selector"
            android:src="@drawable/ic_save_36dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <!--        DEFAULT VALUES-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_defaultBloodSugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/default_bloodsugar" />

            <NumberPicker
                android:id="@+id/spn_defaultBS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickerText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorFastInsulin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_defaultShortTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/short_term_insulin" />

            <NumberPicker
                android:id="@+id/spn_ShortTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickerText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorSlowInsulin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_defaultLongTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/long_term_morning" />

            <NumberPicker
                android:id="@+id/spn_LongTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickerText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorSlowInsulin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_defaultLongTermEve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/long_term_evening" />

            <NumberPicker
                android:id="@+id/spn_LongTermEve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickerText" />
        </LinearLayout>
    </LinearLayout>


    <!--        DEFAULT WARNING VALUES-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/low_blood_sugar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/spn_LowBS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/NumberPickerText" />

                <TextView
                    android:id="@+id/divider1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/divider" />

                <NumberPicker
                    android:id="@+id/spn_LowBSDec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/NumberPickerText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/high_blood_sugar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/spn_HighBS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/NumberPickerText" />

                <TextView
                    android:id="@+id/divider2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/divider" />

                <NumberPicker
                    android:id="@+id/spn_HighBSDec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/NumberPickerText" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
